### Voltaire's Nightmare Changelog ###

# v 2.2.5 #

-Added the following monuments and associated events: House of Wisdom, Palais des Papes in Avignon, Binnenhof in Den Haag (contributed by Fresian)
-Added 6 new papal bulls for the Catholique papacy
-Small fixes for the following mission trees: Papal States, Teutonic Order, Livonian Order, France, Navarra, Bohemia, Worms, Byzantium, Bogomilist
-Fixed CTD caused by missing Epic Games store button
-Some more missions now utilise monuments if you own Leviathan
-The Prussian Confederacy will start with more provinces
-Estates will no longer demand the construction of a manufactory before tech 32
-Natives can now conquer land and vassalize in peace deals
-Tribal land should no longer become uncolonized
-Fixed some overlapping interface
-Instances of Reform Progress growth modifier will now work correctly again
-Removed war canoes from the mod
-The AI will less often form Lombardy
-Changing state religions will no longer refresh missions
-Hopefully fixed terra incognita appearing when switching to England as Normandy
-Other minor localization/bug fixes

# v 2.2.4 #

-Small fixes for the following mission trees: Toulouse, Swabia
-Versailles is now located in the correct province
-Fixed a syntax error in the government names
-Fixed a duplicate insitution event
-Fixed Constantinople causing a crash when conquered while playing with Leviathan
-Nullified Paradox's absurd innovativeness rebalancing of 1.31 by reverting the values back to 1.30
-Sicily and the Papal States are now historical rivals
-The Teutonic Order and Livonian Order will no longer spawn with technology level 75
-Federations will form even slower now
-Some more NI rebalancing

# v 2.2.3 #

-Added the following new mercenary companies: Teutonic & Livonian Panzerreiters
-Small fixes for the following mission trees: Worms
-Fixed wrong localisation displayed for monument events
-Made two Republican government reforms more useful