@@ -132,6 +132,20 @@ cb_germanic_tribute = {
 	war_goal = take_capital_germanic_tribute
 }
 
+cb_invasion = {
+	valid_for_subject = no
+
+	prerequisites = {
+        OR = {
+			has_country_modifier = invasion_nation_m
+			has_country_modifier = armed_jihad_m
+		}
+        is_neighbor_of = FROM
+	}
+
+	war_goal = take_capital_invasion
+}
+
 # Restoration of recently broken PU
 cb_restore_personal_union = {
 	valid_for_subject = no
