@@ -525,6 +525,8 @@ invasion_nation_m = {
 	horde_unity = 1
 	war_exhaustion = -0.1
 	land_maintenance_modifier = -0.25
+	administrative_efficiency = 0.75
+	monarch_military_power = 1
 	tur_militarists_influence = 1
 }
 all_graviates_titles_acquired = {
