@@ -74,6 +74,7 @@ zz_parens_scientiarum = {
     trigger = {
         religion = catholique
         is_papal_controller = yes
+        is_institution_enabled = universities
     }
     ai_will_do = {
         factor = 0
