@@ -1802,6 +1802,23 @@ take_capital_germanic_tribute = {
 	war_name = GERMANIC_TRIBUTE_WAR_NAME
 }
 
+take_capital_invasion = {
+	type = take_capital
+
+	badboy_factor = 0.25
+	prestige_factor = 1.25
+	peace_cost_factor = 0.25
+
+	peace_options = {
+		po_demand_provinces
+		po_gold
+		po_subjugate_vassal
+		po_become_vassal
+	}
+
+	war_name = INVASION_WAR_NAME
+}
+
 take_capital_force_join_hre = {
 	type = take_capital
 	prestige_factor = 0.25
