@@ -3647,7 +3647,7 @@ country_event = {
 		add_stability = -1
 		GLH = {
 			declare_war_with_cb = {
-				casus_belli = cb_horde_vs_civ
+				casus_belli = cb_invasion
 				who = ROOT
 			}
 		}
@@ -3773,7 +3773,7 @@ country_event = {
 		add_stability = -1
 		ILK = {
 			declare_war_with_cb = {
-				casus_belli = cb_horde_vs_civ
+				casus_belli = cb_invasion
 				who = ROOT
 			}
 		}
@@ -5856,20 +5856,6 @@ province_event = {
 	immediate = {
 		hidden_effect = {
 			set_province_flag = ostsiedlung_flag
-			if = {
-				limit = { owner = { is_primitive = yes } }
-				random_list = {
-					33 = {
-						owner = { set_country_flag = get_adm }
-					}
-					33 = {
-						owner = { set_country_flag = get_dip }
-					}
-					33 = {
-						owner = { set_country_flag = get_mil }
-					}
-				}
-			}
 		}
 	}
 
@@ -5877,17 +5863,6 @@ province_event = {
 		name = "HREMA107"
 		ai_chance = {
 			factor = 1
-		}
-		if = {
-			limit = { owner = { is_primitive = yes } }
-			owner = {
-				trigger_switch = {
-					on_trigger = has_country_flag
-					get_adm = { add_adm_power = 33 clr_country_flag = get_adm }
-					get_dip = { add_dip_power = 33 clr_country_flag = get_dip }
-					get_mil = { add_mil_power = 33 clr_country_flag = get_mil }
-				}
-			}
 		}
 		add_base_tax = 1
 		add_base_production = 1
