@@ -6979,7 +6979,12 @@ country_event = {
 				cede_province = SJK
 				add_building = fort_14th
 			}
-			SJK = { declare_war = ROOT }
+			SJK = {
+				declare_war_with_cb = {
+					casus_belli = cb_invasion
+					who = ROOT
+				}
+			}
 		}
 		hidden_effect = {
 			SJK = {
@@ -7004,12 +7009,9 @@ country_event = {
 				}
 				add_ruler_personality = strict_personality
 				add_ruler_personality = conqueror_personality
-				if = {
-					limit = { BGH = { ai = no } }
-					add_country_modifier = {
-						name = "invasion_nation_m"
-						duration = 2920
-					}
+				add_country_modifier = {
+					name = "invasion_nation_m"
+					duration = 10950
 				}
 				if = {
 					limit = {
