@@ -151,6 +151,11 @@
  cb_grand_heretic: "Grand Crusade"
  cb_grand_heretic_desc: "The Catholic powers of Europe have come together in a grand mission to defeat the heathens and heretics."
  HERETIC_WAR_NAME: "$ORDER$$FIRST$ Purge of $SECOND_NAME$"
+ cb_invasion: "Invasion"
+ cb_invasion_desc: "We can fulfill our destiny of ruling an Empire by conquering minor states on a large scale."
+ take_capital_invasion: "Take Capital"
+ take_capital_invasion_desc: "Taking the enemy's capital will demonstrate our superiority."
+ INVASION_WAR_NAME: "$ORDER$$FIRST$ Invasion War against $SECOND_NAME$"
  parias_taxes: "Parias Taxes"
  desc_parias_taxes: "The necessity of extremely high taxes to continue paying parias has made your citizens unhappy and your state not prestigious."
  parias_modifier: "Parias"
