@@ -149,7 +149,12 @@
  cb_grand_crusade_desc: "Die katholischen Mächte Europas haben sich in einer großen Mission zusammengeschlossen, um Heiden und Häretiker zu besiegen."
  cb_grand_heretic: "Großer Kreuzzug"
  cb_grand_heretic_desc: "Die katholischen Mächte Europas haben sich in einer großen Mission zusammengeschlossen, um Heiden und Häretiker zu besiegen."
- HERETIC_WAR_NAME: "$ORDER$$FIRST$e Unterdrückung der $SECOND_NAME$en Ketzerei"
+ HERETIC_WAR_NAME: "$ORDER$$FIRST$e Unterdrückung der $SECOND$en Ketzerei"
+ cb_invasion: "Invasion"
+ cb_invasion_desc: "Wir können unser Schicksal, ein Imperium zu regieren, erfüllen, indem wir kleinere Staaten großflächig erobern."
+ take_capital_invasion: "Eroberung der Hauptstadt"
+ take_capital_invasion_desc: "Die Eroberung der gegnerischen Hauptstadt wird unsere Überlegenheit demonstrieren."
+ INVASION_WAR_NAME: "$ORDER$$FIRST$ Invasionskrieg gegen $SECOND_NAME$"
  parias_taxes: "Parias-Steuern"
  desc_parias_taxes: "Die Notwendigkeit extrem hoher Steuern, um weiterhin Parias zahlen zu können, hat Eure Bürger unglücklich und Euren Staat nicht prestigeträchtig gemacht."
  parias_modifier: "Parias"
