@@ -18,7 +18,7 @@ vn_pap_missions_slot_1 = {
         trigger = {
             if = {
                 limit = { has_dlc = "Emperor" }
-                curia_treasury_size = 1000
+                curia_treasury_size = 2500
             }
             else = {
                 treasury = 500
