@@ -1247,6 +1247,16 @@ vn_pol_missions_slot_5 = {
                 has_production_building_trigger = yes
                 has_trade_building_trigger = yes
             }
+            if = {
+                limit = { has_dlc = "Leviathan" }
+                5986 = {
+                    owned_by = ROOT
+                    has_great_project = {
+                        type = royal_salt_mines
+                        tier = 3
+                    }
+                }
+            }
         }
         effect = {
             add_mercantilism = 2
