@@ -169,7 +169,14 @@ vn_mos_missions_slot_1_a = {
 			3427 = {
 				development = 20
 				owned_by = ROOT
-				is_core = ROOT			
+				is_core = ROOT
+                if = {
+                    limit = { has_dlc = "Leviathan" }
+                    has_great_project = {
+                        type = eremitage
+                        tier = 1
+                    }
+                }		
 			}
         }
         effect = {
@@ -1017,6 +1024,13 @@ vn_mos_missions_slot_2_d = {
 					has_building = cathedral
 				}
 				religion = orthodox
+                if = {
+                    limit = { has_dlc = "Leviathan" }
+                    has_great_project = {
+                        type = kremlin
+                        tier = 3
+                    }
+                }
 			}  			
         }
         effect = {
