@@ -5,6 +5,7 @@
 -Added the following monuments and associated events: House of Wisdom, Palais des Papes in Avignon, Binnenhof in Den Haag (contributed by Fresian)
 -Added 6 new papal bulls for the Catholique papacy
 -Small fixes for the following mission trees: Papal States, Teutonic Order, Livonian Order, France, Navarra, Bohemia, Worms, Byzantium, Bogomilist
+-Added a new Invasion casus belli for the Seljuks, Almoravids and Mongols to encourage their expansion
 -Fixed CTD caused by missing Epic Games store button
 -Some more missions now utilise monuments if you own Leviathan
 -The Prussian Confederacy will start with more provinces
